Refactor magic
