# plaid-service/src/main/java/com/backbase/proto/plaid/controller/PlaidWebHookController.java
@@ -1,42 +1,25 @@
 package com.backbase.proto.plaid.controller;
 
-import com.backbase.proto.plaid.api.PlaidApi;
-import com.backbase.proto.plaid.model.PlaidGetTransactionsResponse;
-import com.backbase.proto.plaid.model.PlaidLinkRequest;
-import com.backbase.proto.plaid.model.PlaidLinkResponse;
-import com.backbase.proto.plaid.model.SetAccessTokenRequest;
-import com.backbase.proto.plaid.service.PlaidLinkService;
-import com.plaid.client.response.WebhookVerificationKeyGetResponse;
-import io.swagger.annotations.ApiOperation;
-import io.swagger.annotations.ApiResponse;
-import io.swagger.annotations.ApiResponses;
-import java.time.LocalDate;
+import com.backbase.proto.plaid.api.WebhookApi;
+import com.backbase.proto.plaid.model.PlaidWebhook;
+import com.backbase.proto.plaid.service.WebhookService;
 import javax.validation.Valid;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RestController;
 
 @Slf4j
 @RestController
-public class PlaidWebHookController {
+@RequiredArgsConstructor
+public class PlaidWebHookController implements WebhookApi {
 
-    private final PlaidLinkService plaidLinkService;
+    private final WebhookService webhookService;
 
-    public PlaidWebHookController(PlaidLinkService plaidLinkService) {
-        this.plaidLinkService = plaidLinkService;
-        log.info("Plaid Controller created");
+    @Override
+    public ResponseEntity<Void> processWebHook(String itemId, @Valid PlaidWebhook plaidWebhook) {
+        log.info("Received Plaid Webhook!");
+        webhookService.process(plaidWebhook);
+        return ResponseEntity.accepted().build();
     }
-
-
-    @RequestMapping(value = "/webhook",
-        produces = { "application/json" },
-        method = RequestMethod.POST)
-    public void handleWebHook(WebhookVerificationKeyGetResponse response) {
-
-    }
-
-
-
 }
